# LightBASIC

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  Makefile  Makefile~  MemoryPool.h  ParseDeclare.cpp  README  README.md  Utils.h  link.sh~  llvm.xcconfig  todo.txt
.run/: Compile.run.xml  Dump ASM.run.xml  Dump AST.run.xml  Dump CODE.run.xml  Dump LLVM IR.run.xml
LightBASIC.xcodeproj/: project.pbxproj
cmake/: CompilerWarnings.cmake  llvm.cmake
docs/: Milestone 2.txt  README  Refactoring.txt  TODO.txt  grammar.txt  type.txt  typedef.def.h
lbc.xcodeproj/: project.pbxproj
lbc.xcodeproj/xcshareddata/xcschemes/: lbc.xcscheme
misc/lightbasic.tmbundle/: info.plist
misc/lightbasic.tmbundle/Preferences/: Comments.tmPreferences
misc/lightbasic.tmbundle/Syntaxes/: lightbasic.tmLanguage
samples/: A_Simple_Test.bas  AssignBooleanExpr.bas  Boolean.bas  CmdLine.bas  FloatingPoint.bas  For.bas  Hello  Hello.bas  HelloWorld.bas  If.bas  MallocFree.bas  NumberGame.bas  Pointers.bas  Simple.bas  SubsFuncs.bas  Types.bas  Variables.bas  generators.bas  module_1.bas  module_2.bas
samples/tests/: fail-01.bas  fail-02.bas  fail-03.bas  fail-04.bas  fail-08.bas  run.sh  test-001-hello.bas  test-002-integer.bas  test-003-functions.bas  test-004-var.bas  test-005-var-double.bas  test-006-neg.bas  test-007-conversions.bas  test-008-logical-not.bas  test-009-if-expr.bas  test-010-if.bas  test-011-expr.bas  test-012-if-var.bas  test-013-for.bas  test-014-cast.bas  test-015-pointer.bas  test-016-null.bas  test-017-cont-exit.bas  test-017-flow.bas  test-018-nested-flow.bas  test-019-do-loop.bas  test-02.bas  test-020-type.bas  test-03.bas  test-05.bas  test-07.bas  test-11.bas  test-12.bas  test-13.bas  test-14.bas  test-15.bas  test-17.bas
scripts/: build-llvm.bat  build-llvm.sh
src/: Ast.cpp  Ast.def.h  Ast.h  Ast.h~  AstVisitor.cpp  AstVisitor.cpp~  AstVisitor.h  AstVisitor.h~  CMakeLists.txt  CodeGen.cpp  CodeGen.h  Context.cpp  Context.cpp~  Context.h  Context.h~  Driver.cpp  Driver.h  Emitter.cpp  Emitter.cpp~  Emitter.h  IrBuilder.cpp  IrBuilder.cpp~  IrBuilder.h  Lexer.cpp  Lexer.h  LightBASIC.h.pch  MemoryPool.h  ParseAttributes.cpp  ParseDIM.cpp  ParseDeclaration.cpp  ParseDim.cpp  ParseExpression.cpp  ParseIdentifier.cpp  ParseTypeExpr.cpp  ParseVar.cpp  Parser.cpp  Parser.h  ParserShared.h  Path.cpp  Path.h  (+32 more)
src/Ast/: Ast.cpp  Ast.def.h  Ast.def.hpp  Ast.h  Ast.hpp  AstPrinter.cpp  AstPrinter.h  AstPrinter.hpp  AstVisitor.cpp  AstVisitor.h  CodePrinter.cpp  CodePrinter.h  CodePrinter.hpp  ControlFlowStack.h  ControlFlowStack.hpp  ValueCategory.hpp  ValueFlags.hpp
src/Diag/: DiagnosticEngine.cpp  DiagnosticEngine.hpp  Diagnostics.def.hpp
src/Driver/: CmdLineParser.cpp  CmdLineParser.h  CmdLineParser.hpp  CompileOptions.cpp  CompileOptions.hpp  Context.cpp  Context.h  Context.hpp  Driver.cpp  Driver.h  Driver.hpp  README.md  Source.h  Source.hpp  TempFileCache.cpp  TempFileCache.h  TempFileCache.hpp  Tool.cpp  Tool.h  TranslationUnit.h  TranslationUnit.hpp
src/Driver/Toolchain/: ToolTask.cpp  ToolTask.h  ToolTask.hpp  Toolchain.cpp  Toolchain.h  Toolchain.hpp  Toolchain.unix.cpp  Toolchain.windows.cpp
src/Lexer/: Lexer.cpp  Lexer.h  Lexer.hpp  Token.cpp  Token.def.h  Token.def.hpp  Token.h  Token.hpp
src/Parser/: Ast.cpp  Ast.def.h  Ast.h  AstVisitor.h  Parser.cpp  Parser.h  Parser.hpp
src/Sem/: SemanticAnalyzer.cpp  SemanticAnalyzer.h  SemanticAnalyzer.hpp
src/Sem/Passes/: ConstantFoldingPass.cpp  ConstantFoldingPass.h  ConstantFoldingPass.hpp  ForStmtPass.cpp  ForStmtPass.hpp  FuncDeclarerPass.cpp  FuncDeclarerPass.h  FuncDeclarerPass.hpp  TypeDeclPass.cpp  TypeDeclPass.hpp  TypePass.cpp  TypePass.h  TypePass.hpp
src/Symbol/: Symbol.cpp  Symbol.h  Symbol.hpp  SymbolTable.cpp  SymbolTable.h  SymbolTable.hpp  Type.cpp  Type.h
src/Type/: Type.cpp  Type.def.h  Type.h  Type.hpp  TypeUdt.cpp  TypeUdt.hpp
src/Utils/: EnumFlags.h  Utils.cpp  Utils.h  Utils.hpp  Version.h  Version.hpp
test/: TestLexer.cpp  TestLexer.h  main.cpp  test.1
tests/: CMakeLists.txt  LexerTests.cpp  fail-05.bas  fail-06.bas  run.sh  run.sh~  test-01.bas  test-04.bas  test-05.bas  test-06.bas  test-07.bas  test-10.bas  test-13.bas  test-16.bas
